# prompt-genius

./: .env  pyproject.toml
src/: main.py
src/prompt_genius/: ai_runner.py
